# emails_solana

./: Cargo.toml  readme.md
client/: package.json
client/src/: App.jsx  theme.js
client/src/components/: MailTable.jsx  MailTableHead.jsx  MailToolbar.jsx  Navbar.jsx  PrivateRoute.jsx  index.jsx
client/src/models/: index.js
client/src/pages/loggedin/: Inbox.jsx  SendMail.jsx  Sent.jsx  ViewMail.jsx  index.jsx
client/src/pages/loggedout/: Signin.jsx
client/src/services/: accountService.js  index.js  mailService.js
client/src/store/: index.js
client/src/store/actionTypes/: accountTypes.js  index.js  mailTypes.js  pageTypes.js
client/src/store/actions/: accountActions.js  index.js  mailActions.js  pageActions.js
client/src/store/reducers/: accountReducer.js  index.js  mailReducer.js  pageReducer.js
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
