[package]
name = "solana_mails"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
solana-program = "1.10.2"
thiserror = "1.0.30"


[lib]
crate-type = ["cdylib", "lib"]
